--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "npm": "^9.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
