--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
-    "npm": "^9.8.1"
+    "npm": "^9.8.1",
+    "sass": "^1.64.2",
+    "sass-loader": "^13.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
